# isc-proto

./: CMakeLists.txt  README.md  client.py  debug.gdb  debug.sh  launch.json  prj.conf  zeta_isc.py  zeta_server.py
include/: zt_uart.h
src/: main.c  zt_uart.c
